--- a/README
+++ b/README
@@ -2,3 +2,5 @@ Here are some common files across both the official server and the client.
 
 It might be useful to copy paste stuff here into a client library,
 although it's not specifically written to be in one.
+
+Rust users should refer to synac-rs instead: https://github.com/jD91mZM2/synac-rs
